--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ docker-build:
           echo "docker 完成启动"
           break
         fi
-        if [[ elapsed_time -gt $timeout ]]; then
+        if [[ $elapsed_time -gt $timeout ]]; then
           echo "docker 启动超时"
           exit 1
         fi
