--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,3 +53,8 @@ docker-build:
   # https://docs.gitlab.com/ee/ci/yaml/index.html#rules
 #  rules:
 #    - if: $CI_COMMIT_TAG
+
+# 嵌入
+include:
+  # 同步代码
+  - /sync.yml
