--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ docker-build:
     - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
   script:
     - NAME=golang
-    - TAG=1.21-alpine3.18-git
+    - TAG=1.21-alpine3.18-git-build-base
     - docker build -t $DOCKER_USERNAME/$NAME:$TAG . --no-cache --progress plain
     - docker images
     - docker tag $DOCKER_USERNAME/$NAME:$TAG $CI_REGISTRY_IMAGE/$NAME:$TAG
